# HtmlParser

./: Cargo.toml  Makefile  README.md
data/: example.html
src/: grammar.pest  lib.rs  main.rs
tests/: parser_test.rs
