[package]
name = "html_simple_parser"
version = "0.1.1"
edition = "2021"
description = "A simple parser for html files to extract tags, child tags, attributes, etc."
readme = "README.md"
repository = "https://github.com/KatyaStriletska/HtmlParser"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
clap =  { version = "4.4.6", features = ["derive"] }
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.2"
